adds license to all src files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,4 @@ add_subdirectory(algo)
 add_subdirectory(neighbor)
 add_subdirectory(io)
 add_subdirectory(container)
-add_subdirectory(rho_solver)
+add_subdirectory(solver)
