--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(algo)
 add_subdirectory(neighbor)
 add_subdirectory(io)
 add_subdirectory(container)
+add_subdirectory(parstd)
 add_subdirectory(preprocess)
 add_subdirectory(wsph)
 add_subdirectory(solver)
